// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion > renders correctly for fullBorder and filledBackground variant 1`] = `
.c1 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  transform: rotate(0deg);
}

.c5 svg {
  color: #9d927b!important;
}

.c4 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c0 {
  border-bottom: 1px solid #dad2c4;
  border: 1px solid #dad2c4;
  border-radius: 16px;
  background-color: #f1e9dc;
}

.c3 {
  display: flex;
  flex-direction: column;
}

.c2 {
  cursor: pointer;
}

.c6 {
  transform: rotate(180deg);
  transition: transform 0.6s ease;
}

@media (min-width: 0px) {
  .c1 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-left: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-right: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c1 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-top: 12px;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-bottom: 16px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <h2
          class="c4"
          cursor="inherit"
          title=""
        >
          How it works
        </h2>
      </div>
      <span
        class="c5 c6"
        data-testid="caret-container"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
    <div
      class="c7"
    >
      Lots of brilliant information about this beautiful component
    </div>
  </div>
</div>
`;

exports[`Accordion > renders correctly when closed 1`] = `
.c1 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  transform: rotate(0deg);
}

.c5 svg {
  color: #9d927b!important;
}

.c4 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c0 {
  border-bottom: 1px solid #dad2c4;
}

.c3 {
  display: flex;
  flex-direction: column;
}

.c2 {
  cursor: pointer;
}

.c6 {
  transform: rotate(0deg);
  transition: transform 0.6s ease;
}

@media (min-width: 0px) {
  .c1 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-left: 0;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-right: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c1 {
    align-items: center;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <h2
          class="c4"
          cursor="inherit"
          title=""
        >
          How it works
        </h2>
      </div>
      <span
        class="c5 c6"
        data-testid="caret-container"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Accordion > renders correctly when expanded 1`] = `
.c1 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  transform: rotate(0deg);
}

.c5 svg {
  color: #9d927b!important;
}

.c4 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

.c0 {
  border-bottom: 1px solid #dad2c4;
}

.c3 {
  display: flex;
  flex-direction: column;
}

.c2 {
  cursor: pointer;
}

.c6 {
  transform: rotate(180deg);
  transition: transform 0.6s ease;
}

@media (min-width: 0px) {
  .c1 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-left: 0;
  }
}

@media (min-width: 0px) {
  .c1 {
    padding-right: 16px;
  }
}

@media (min-width: 0px) {
  .c1 {
    justify-content: space-between;
  }
}

@media (min-width: 0px) {
  .c1 {
    align-items: center;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-top: 12px;
  }
}

@media (min-width: 0px) {
  .c7 {
    padding-bottom: 16px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <h2
          class="c4"
          cursor="inherit"
          title=""
        >
          How it works
        </h2>
      </div>
      <span
        class="c5 c6"
        data-testid="caret-container"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
    <div
      class="c7"
    >
      Lots of brilliant information about this beautiful component
    </div>
  </div>
</div>
`;
